flux/infrastructure/knative-lambda-c2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-lambda-c2
  labels:
    app.kubernetes.io/name: knative-lambda-c2
    app.kubernetes.io/component: command-control
